fix floating button on mobile mode

--- a/src/styles/furnitureSlider.css
+++ b/src/styles/furnitureSlider.css
@@ -18,7 +18,7 @@
     left: 0;
     width:37.5%;
     display: flex;
-    z-index:2
+    z-index:1
 }
 
 .btnList button{
